<resources>
    <string name="app_name">Table Gamer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="app_title">TABLE\nGAMER</string>
    <string name="sign_in">SIGN IN</string>
    <string name="home">HOME</string>
    <string name="new_post">NEW POST</string>
    <string name="game_topic">貼文標題</string>
    <string name="game_description">貼文內容</string>
    <string name="game_time">遊戲時間</string>
    <string name="game_location">遊戲地點</string>
    <string name="game_info">GAME INFO</string>
    <string name="photo">PHOTO</string>
    <string name="game_name">遊戲名稱</string>
    <string name="game_type">遊戲種類</string>
    <string name="game_rule">遊戲規則</string>
    <string name="game_member">遊戲成員</string>
    <string name="event_area">EVENT AREA</string>
    <string name="new_event">NEW EVENT</string>
    <string name="game_member_limit">人數上限</string>
    <string name="game_role">遊戲角色</string>
    <string name="create">CREATE</string>
    <string name="post_comment">COMMENT</string>
    <string name="edit_comment">COMMENT HERE</string>
    <string name="send">SEND</string>
    <string name="detail_post">POST DETAIL</string>
    <string name="detail_event">EVENT DETAIL</string>
    <string name="event">EVENT</string>
    <string name="favorite">FAVORITE</string>
    <string name="tools">TOOLS</string>
    <string name="profile">PROFILE</string>
    <string name="join">JOIN</string>
    <string name="leave">LEAVE</string>
    <string name="no_more_place">NO MORE PLACE</string>
    <string name="game">GAME</string>
    <string name="post">POST</string>
    <string name="edit">EDIT</string>
    <string name="profile_info">嗨嗨
    \n歡迎光臨 My Profile
    \n喜歡玩策略跟陣營遊戲
    \n歡迎揪團! </string>
    <string name="game_name_chinese">遊戲名稱:&#160;</string>
    <string name="game_name_english">Game:&#160;</string>
    <string name="game_topic_english">Topic:&#160;</string>
    <string name="game_location_english">Location:&#160;</string>
    <string name="game_type_chinese">遊戲種類:&#160;</string>
    <string name="game_player_limit_chinese">人數限制:&#160;</string>
    <string name="game_time_chinese">遊戲時間:&#160;</string>
    <string name="game_rules_chinese">遊戲簡介:</string>
    <string name="game_roles_chinese">遊戲角色:</string>
    <string name="game_tools_chinese">遊戲工具:</string>
    <string name="minutes">&#160;分鐘</string>
    <string name="people">&#160;人</string>
    <string name="browse_recently">最近瀏覽:</string>
    <string name="time_chinese">時間:&#160;</string>
    <string name="location_chinese">地點:&#160;</string>
    <string name="join_success">成功加入</string>
    <string name="delete_success">成功退出</string>
    <string name="event_status">揪團</string>
    <string name="post_status">發文</string>
    <string name="search">SEARCH</string>
    <string name="empty" />
    <string name="add_player">Add</string>
    <string name="fraction">&#160;&#047;&#160;</string>
    <string name="dice_total">TOTAL:&#160;</string>
    <string name="watch_game">Watch game first</string>
    <string name="add_game">Add game first</string>
    <string name="no_event">No event yet</string>
    <string name="no_post">No post yet</string>
    <string name="your_name">Your name</string>
    <string name="your_intro">Your introduction</string>
    <string name="go">GO</string>
    <string name="roll">ROLL</string>
    <string name="click_to_edit">Click circle below to edit</string>
    <string name="sure">SURE</string>
    <string name="enter_game_type">請填寫遊戲種類</string>
    <string name="enter_game_time">請填寫遊戲時間</string>

</resources>