<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_nav_home_selector"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_tools"
        android:icon="@drawable/ic_nav_dice_selector"
        android:title="@string/tools" />
    <item
        android:id="@+id/navigation_game"
        android:icon="@drawable/ic_nav_game_selector"
        android:title="@string/game" />
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_nav_pin_selector"
        android:title="@string/favorite" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_nav_simpson_selector"
        android:title="@string/profile" />
</menu>