<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.sylvie.boardgameguide.create.NewEventViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_new_post"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/rosyOrange">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/button_newEvent_create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/constraint_new_post"
                app:layout_constraintStart_toStartOf="@+id/constraint_new_post"
                app:layout_constraintTop_toTopOf="@+id/constraint_new_post">

                <EditText
                    android:id="@+id/edit_newEvent_topic"
                    style="@style/edit_new_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/game_topic"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edit_newEvent_description"
                    style="@style/edit_new_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/game_description"
                    android:inputType="textMultiLine"
                    app:layout_constraintEnd_toEndOf="@+id/edit_newEvent_topic"
                    app:layout_constraintStart_toStartOf="@+id/edit_newEvent_topic"
                    app:layout_constraintTop_toBottomOf="@+id/edit_newEvent_topic" />

                <TextView
                    android:id="@+id/edit_newEvent_game_time"
                    style="@style/edit_new_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/game_time"
                    app:layout_constraintEnd_toEndOf="@+id/edit_newEvent_description"
                    app:layout_constraintStart_toStartOf="@+id/edit_newEvent_description"
                    app:layout_constraintTop_toBottomOf="@+id/edit_newEvent_description" />

                <EditText
                    android:id="@+id/edit_newEvent_game_location"
                    style="@style/edit_new_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/game_location"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="@+id/edit_newEvent_game_time"
                    app:layout_constraintStart_toStartOf="@+id/edit_newEvent_game_time"
                    app:layout_constraintTop_toBottomOf="@+id/edit_newEvent_game_time" />

                <ImageView
                    android:id="@+id/icon_mr_krabs"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="@+id/edit_newEvent_game_location"
                    app:layout_constraintTop_toBottomOf="@+id/edit_newEvent_game_location"
                    app:srcCompat="@drawable/ic_mr_krabs" />

                <TextView
                    android:id="@+id/text_newEvent_game_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/finger_paint"
                    android:text="@string/game_info"
                    android:textColor="@color/darkBrown"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/icon_mr_krabs"
                    app:layout_constraintEnd_toStartOf="@+id/icon_patrick_star"
                    app:layout_constraintStart_toEndOf="@+id/icon_mr_krabs"
                    app:layout_constraintTop_toTopOf="@+id/icon_mr_krabs" />

                <ImageView
                    android:id="@+id/icon_patrick_star"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:layout_constraintBottom_toBottomOf="@+id/icon_mr_krabs"
                    app:layout_constraintEnd_toEndOf="@+id/edit_newEvent_game_location"
                    app:layout_constraintTop_toTopOf="@+id/icon_mr_krabs"
                    app:srcCompat="@drawable/ic_patrick_star" />

                <TextView
                    android:id="@+id/line_1"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/darkBrown"
                    app:layout_constraintEnd_toEndOf="@+id/icon_patrick_star"
                    app:layout_constraintStart_toStartOf="@+id/icon_mr_krabs"
                    app:layout_constraintTop_toBottomOf="@+id/icon_mr_krabs" />

                <EditText
                    android:id="@+id/edit_newEvent_game_name"
                    style="@style/edit_new_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/game_name"
                    android:inputType="textPersonName"
                    android:text="@{viewModel.game.name}"
                    app:layout_constraintEnd_toEndOf="@+id/line_1"
                    app:layout_constraintStart_toStartOf="@+id/line_1"
                    app:layout_constraintTop_toBottomOf="@+id/line_1" />

                <EditText
                    android:id="@+id/edit_newEvent_game_type"
                    style="@style/edit_new_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/game_type"
                    android:inputType="textPersonName"
                    android:text="@{viewModel.game.type == null ? @string/empty : String.valueOf(viewModel.game.type)}"
                    app:layout_constraintEnd_toEndOf="@+id/edit_newEvent_game_name"
                    app:layout_constraintStart_toStartOf="@+id/edit_newEvent_game_name"
                    app:layout_constraintTop_toBottomOf="@+id/edit_newEvent_game_name" />

                <EditText
                    android:id="@+id/edit_newEvent_game_rule"
                    style="@style/edit_new_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/game_rule"
                    android:inputType="textMultiLine"
                    android:text="@{viewModel.game.rules}"
                    app:layout_constraintEnd_toEndOf="@+id/edit_newEvent_game_type"
                    app:layout_constraintStart_toStartOf="@+id/edit_newEvent_game_type"
                    app:layout_constraintTop_toBottomOf="@+id/edit_newEvent_game_type" />

                <EditText
                    android:id="@+id/edit_newEvent_game_member"
                    style="@style/edit_new_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/game_member_limit"
                    android:inputType="textMultiLine"
                    android:text="@{viewModel.game.type == null ? @string/empty : String.valueOf(viewModel.game.playerLimit)}"
                    app:layout_constraintEnd_toEndOf="@+id/edit_newEvent_game_rule"
                    app:layout_constraintStart_toStartOf="@+id/edit_newEvent_game_rule"
                    app:layout_constraintTop_toBottomOf="@+id/edit_newEvent_game_rule" />

                <ImageView
                    android:id="@+id/icon_jake"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="@+id/edit_newEvent_game_member"
                    app:layout_constraintTop_toBottomOf="@+id/edit_newEvent_game_member"
                    app:srcCompat="@drawable/ic_jake" />

                <TextView
                    android:id="@+id/text_newEvent_event_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/finger_paint"
                    android:text="@string/photo"
                    android:textColor="@color/darkBrown"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/icon_jake"
                    app:layout_constraintEnd_toStartOf="@+id/icon_finn"
                    app:layout_constraintStart_toEndOf="@+id/icon_jake"
                    app:layout_constraintTop_toTopOf="@+id/icon_jake" />

                <ImageView
                    android:id="@+id/icon_finn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:layout_constraintBottom_toBottomOf="@+id/icon_jake"
                    app:layout_constraintEnd_toEndOf="@+id/edit_newEvent_game_member"
                    app:layout_constraintTop_toTopOf="@+id/icon_jake"
                    app:srcCompat="@drawable/ic_finn" />

                <TextView
                    android:id="@+id/line_2"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:background="@color/darkBrown"
                    app:layout_constraintEnd_toEndOf="@+id/icon_finn"
                    app:layout_constraintStart_toStartOf="@+id/icon_jake"
                    app:layout_constraintTop_toBottomOf="@+id/icon_jake" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_newPost_photo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toTopOf="@+id/button_add_photo"
                    app:layout_constraintEnd_toEndOf="@+id/edit_newEvent_game_member"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/edit_newEvent_game_member"
                    app:layout_constraintTop_toBottomOf="@+id/line_2"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/button_add_photo"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/frame_edit_new_post"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/edit_newEvent_game_member"
                    app:layout_constraintStart_toStartOf="@+id/edit_newEvent_game_member" />

                <ImageView
                    android:id="@+id/icon_add_photo"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintBottom_toBottomOf="@id/constraint2"
                    app:layout_constraintEnd_toEndOf="@+id/button_add_photo"
                    app:layout_constraintStart_toStartOf="@+id/button_add_photo"
                    app:layout_constraintTop_toTopOf="@+id/button_add_photo"
                    app:srcCompat="@drawable/ic_add" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/button_newEvent_create"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@color/vintageOrange"
            android:fontFamily="@font/finger_paint"
            android:text="@string/create"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>