<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_new_game"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/rosyOrange">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="@+id/constraint_new_game"
                app:layout_constraintStart_toStartOf="@+id/constraint_new_game"
                app:layout_constraintTop_toTopOf="@+id/constraint_new_game">


                <ImageView
                    android:id="@+id/icon_mr_krabs"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_mr_krabs" />

                <TextView
                    android:id="@+id/text_game_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/finger_paint"
                    android:text="@string/game_info"
                    android:textColor="@color/darkBrown"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/icon_mr_krabs"
                    app:layout_constraintEnd_toStartOf="@+id/icon_patrick_star"
                    app:layout_constraintStart_toEndOf="@+id/icon_mr_krabs"
                    app:layout_constraintTop_toTopOf="@+id/icon_mr_krabs" />

                <ImageView
                    android:id="@+id/icon_patrick_star"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/icon_mr_krabs"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/icon_mr_krabs"
                    app:srcCompat="@drawable/ic_patrick_star" />

                <TextView
                    android:id="@+id/line_1"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/darkBrown"
                    app:layout_constraintEnd_toEndOf="@+id/icon_patrick_star"
                    app:layout_constraintStart_toStartOf="@+id/icon_mr_krabs"
                    app:layout_constraintTop_toBottomOf="@+id/icon_mr_krabs" />

                <EditText
                    android:id="@+id/edit_game_name"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/frame_edit_new_post"
                    android:ems="10"
                    android:hint="@string/game_name"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/gray_888888"
                    app:layout_constraintEnd_toEndOf="@+id/line_1"
                    app:layout_constraintStart_toStartOf="@+id/line_1"
                    app:layout_constraintTop_toBottomOf="@+id/line_1" />

                <EditText
                    android:id="@+id/edit_game_type"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/frame_edit_new_post"
                    android:ems="10"
                    android:hint="@string/game_type"
                    android:inputType="number"
                    android:textColorHint="@color/gray_888888"
                    app:layout_constraintEnd_toEndOf="@+id/edit_game_name"
                    app:layout_constraintStart_toStartOf="@+id/edit_game_name"
                    app:layout_constraintTop_toBottomOf="@+id/edit_game_name" />

                <EditText
                    android:id="@+id/edit_player_limit"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/frame_edit_new_post"
                    android:ems="10"
                    android:hint="@string/game_member_limit"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/gray_888888"
                    app:layout_constraintEnd_toEndOf="@+id/edit_game_type"
                    app:layout_constraintStart_toStartOf="@+id/edit_game_type"
                    app:layout_constraintTop_toBottomOf="@+id/edit_game_type" />


                <EditText
                    android:id="@+id/edit_game_time"
                    android:layout_width="361dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/frame_edit_new_post"
                    android:ems="10"
                    android:hint="@string/game_time"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/gray_888888"
                    app:layout_constraintEnd_toEndOf="@+id/edit_player_limit"
                    app:layout_constraintStart_toStartOf="@+id/edit_player_limit"
                    app:layout_constraintTop_toBottomOf="@+id/edit_player_limit" />

                <EditText
                    android:id="@+id/edit_game_rules"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/frame_edit_new_post"
                    android:ems="10"
                    android:gravity="top"
                    android:hint="@string/game_rule"
                    android:inputType="textMultiLine"
                    android:textColorHint="@color/gray_888888"
                    app:layout_constraintEnd_toEndOf="@+id/edit_game_time"
                    app:layout_constraintStart_toStartOf="@+id/edit_game_time"
                    app:layout_constraintTop_toBottomOf="@+id/edit_game_time" />

                <EditText
                    android:id="@+id/edit_game_roles"
                    android:layout_width="361dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/frame_edit_new_post"
                    android:ems="10"
                    android:gravity="top"
                    android:hint="@string/game_role"
                    android:inputType="textMultiLine"
                    android:textColorHint="@color/gray_888888"
                    app:layout_constraintEnd_toEndOf="@+id/edit_game_rules"
                    app:layout_constraintStart_toStartOf="@+id/edit_game_rules"
                    app:layout_constraintTop_toBottomOf="@+id/edit_game_rules" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_newPost_photo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/frame_edit_new_post"
                    app:layout_constraintEnd_toEndOf="@+id/edit_game_roles"
                    app:layout_constraintStart_toStartOf="@+id/edit_game_roles"
                    app:layout_constraintTop_toBottomOf="@+id/edit_game_roles" />

                <TextView
                    android:id="@+id/button_add_photo"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/frame_edit_new_post"
                    app:layout_constraintBottom_toTopOf="@+id/button_game_create"
                    app:layout_constraintEnd_toEndOf="@+id/edit_game_roles"
                    app:layout_constraintStart_toStartOf="@+id/edit_game_roles"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_newPost_photo" />

                <ImageView
                    android:id="@+id/icon_add_photo"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:layout_constraintBottom_toBottomOf="@+id/button_add_photo"
                    app:layout_constraintEnd_toEndOf="@+id/button_add_photo"
                    app:layout_constraintStart_toStartOf="@+id/button_add_photo"
                    app:layout_constraintTop_toTopOf="@+id/button_add_photo"
                    app:srcCompat="@drawable/ic_add" />

                <Button
                    android:id="@+id/button_game_create"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:background="@color/vintageOrange"
                    android:fontFamily="@font/finger_paint"
                    android:text="@string/create"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>